--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0"
   }
 }
